HAR-76: Fix merge conflict, add 'GetUser' and swagger.
