# internal/handler/user.go
@@ -9,6 +9,31 @@ import (
 	"golang.org/x/crypto/bcrypt"
 )
 
+func MakeUserResponse(user entity.User) entity.UserResponse {
+	userResponse := entity.UserResponse{
+		UserId:    user.UserID,
+		Email:     user.Email,
+		Nickname:  user.Nickname,
+		AvatarURL: user.AvatarURL,
+	}
+	return userResponse
+}
+
+// Update user.
+//
+//	@Summary		Update user
+//	@Description	Update user by description and user id.
+//	@Tags			Users
+//	@Produce		json
+//	@Accept			json
+//	@Param			Cookie		header		string	true	"session-token"	default(session-token=)
+//	@Param			nickname	path		string	true	"User nickname"
+//	@Success		200			{object}	entity.UserProfileResponse
+//	@Failure		400			{object}	errs.ErrorResponse	"Possible code responses: 3, 4, 5, 12, 13, 18"
+//	@Failure		401			{object}	errs.ErrorResponse	"Possible code responses: 2."
+//	@Failure		403			{object}	errs.ErrorResponse	"Possible code responses: 14."
+//	@Failure		500			{object}	errs.ErrorResponse	"Possible code responses: 6, 11."
+//	@Router			/users/{nickname}/ [get]
 func (h *APIHandler) GetUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -32,13 +57,8 @@ func (h *APIHandler) GetUser(w http.ResponseWriter, r *http.Request) {
 	}
 
 	isOwner := false
-	if ctx.Value("is_auth") == true {
-		userIdFromSession, ok := ctx.Value("user_id").(entity.UserID)
-		if !ok {
-			WriteErrorResponse(w, h.logger, errs.ErrorInfo{
-				LocalErr: errs.ErrTypeConversion,
-			})
-		}
+	userIdFromSession, ok := ctx.Value("user_id").(entity.UserID)
+	if ok {
 		isOwner = user.UserID == userIdFromSession
 	}
 
@@ -48,7 +68,6 @@ func (h *APIHandler) GetUser(w http.ResponseWriter, r *http.Request) {
 		IsOwner:        isOwner,
 	}
 	WriteDefaultResponse(w, h.logger, userProfile)
-
 }
 
 // Update user.
@@ -70,7 +89,7 @@ func (h *APIHandler) GetUser(w http.ResponseWriter, r *http.Request) {
 func (h *APIHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	userIdFromSlug, err := ReadUint64Slug(r, "user_id")
+	userIdFromSlug, err := ReadInt64Slug(r, "user_id")
 	if err != nil {
 		WriteErrorResponse(w, h.logger, MakeErrorInfo(err, errs.ErrInvalidSlug))
 		return
